--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,10 @@ dependencies:
   cupertino_icons: ^1.0.0
   flutter_svg: ^0.19.0 
   select_form_field: ^1.1.0 
+  tinycolor: ^1.0.3
+  badges: ^1.1.6
+  polygon_clipper: ^1.0.2
+  # rolling_nav_bar: ^0.0.3
 
 dev_dependencies:
   flutter_test:
@@ -49,7 +53,8 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/images/
-    - assets/images/png/
+    - assets/images/png/ 
+    - assets/images/png/home.png
     - assets/images/svg/
     - assets/fonts/
     - assets/
