--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,7 +33,18 @@ dependencies:
   tinycolor: ^1.0.3
   badges: ^1.1.6
   polygon_clipper: ^1.0.2
-  # rolling_nav_bar: ^0.0.3
+  provider: ^4.3.2+2
+  mvc_pattern: ^6.4.0
+  flutter_secure_storage: ^3.3.4
+  shared_preferences: ^0.5.10
+  http: ^0.12.2
+  get_it: ^5.0.1
+  flushbar: ^1.10.4
+  firebase_core: ^0.7.0
+  firebase_crashlytics: ^0.4.0+1
+  firebase_remote_config: ^0.6.0
+  pinput: ^1.0.0
+  flutter_screen_scaler: ^2.0.0
 
 dev_dependencies:
   flutter_test:
