--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,7 @@ dependencies:
   firebase_remote_config: ^0.6.0
   pinput: ^1.0.0
   flutter_screen_scaler: ^2.0.0
+  device_info: ^2.0.0
 
 dev_dependencies:
   flutter_test:
