--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -3,7 +3,7 @@ description: A new Flutter project.
 
 # The following line prevents the package from being accidentally published to
 # pub.dev using `pub publish`. This is preferred for private packages.
-publish_to: 'none' # Remove this line if you wish to publish to pub.dev
+publish_to: "none" # Remove this line if you wish to publish to pub.dev
 
 # The following defines the version and build number for your application.
 # A version number is three numbers separated by dots, like 1.2.43
@@ -24,25 +24,24 @@ dependencies:
   flutter:
     sdk: flutter
 
-
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.0
-  flutter_svg: ^0.19.3
-  select_form_field: ^1.1.0 
+  flutter_svg: ^0.23.0+1
+  select_form_field: ^2.2.0
   tinycolor: ^1.0.3
-  badges: ^1.1.6
+  badges: ^2.0.1
   polygon_clipper: ^1.0.2
-  provider: ^4.3.2+2
-  mvc_pattern: ^6.4.0
-  flutter_secure_storage: ^3.3.4
-  shared_preferences: ^0.5.10
-  http: ^0.12.2
-  get_it: ^5.0.1
+  provider: ^6.0.1
+  mvc_pattern: ^8.1.1
+  flutter_secure_storage: ^5.0.2
+  shared_preferences: ^2.0.8
+  http: ^0.13.4
+  get_it: ^7.2.0
   flushbar: ^1.10.4
-  firebase_core: ^0.7.0
-  firebase_crashlytics: ^0.4.0+1
-  firebase_remote_config: ^0.6.0
+  firebase_core: ^1.10.0
+  firebase_crashlytics: ^2.3.0
+  firebase_remote_config: ^0.11.0+2
   pinput: ^1.0.0
   flutter_screen_scaler: ^2.0.0
   device_info: ^2.0.0
@@ -56,7 +55,6 @@ dev_dependencies:
 
 # The following section is specific to Flutter.
 flutter:
-
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
   # the material Icons class.
@@ -65,7 +63,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/images/
-    - assets/images/png/ 
+    - assets/images/png/
     - assets/images/png/home.png
     - assets/images/svg/
     - assets/images/svg/hello.svg
@@ -87,15 +85,15 @@ flutter:
     - family: Bold
       fonts:
         - asset: assets/fonts/roboto.bold.ttf
-        
+
     - family: Regular
       fonts:
         - asset: assets/fonts/roboto.regular.ttf
-    
+
     - family: Medium
       fonts:
         - asset: assets/fonts/roboto.medium.ttf
-    
+
     - family: Light
       fonts:
         - asset: assets/fonts/roboto.light.ttf
